tests/cases/typecheck/property_access/numeric_access_on_struct.hash
// run=fail
Frobulate := struct(
  data: i32,
  other: char = 'c',
)

main := () -> i32 => {
  t := Frobulate(data = 23)
  t.2
}
